[package]
name = "redis-lock"
version = "0.1.0"
edition = "2021"
#bin
[[bin]]
name = "redis-lock"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version ="0.20.0",features = ["r2d2"] }
r2d2 = "0.8.9"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.8",features = ["rt"] }
libc = "0.2"
winapi = {version="0.3.9",features=["processthreadsapi"]}

